# Taller-de-Programacion-1

./: README.md
bomberman-individual/: Cargo.toml
bomberman-individual/src/: error_laberinto.rs  laberinto.rs  main.rs  piezas.rs
gitr/: Cargo.toml  comandos_CURL  comandos_CURL~  gitrconfig
gitr/bruno/: .head_repo  gitrconfig
gitr/bruno/repo1/gitr/: index
gitr/bruno/repo1/gitr/refs/heads/: branch
gitr/bruno/repo2/gitr/: index  remote
gitr/bruno/repo2/gitr/refs/heads/: master
gitr/bruno/repo3/: archivo
gitr/bruno/repo3/gitr/: HEAD  index  remote
gitr/bruno/repo3/gitr/refs/heads/: branch  master
gitr/bruno/repo_clonado/: archivo
gitr/bruno/repo_clonado/gitr/: index  remote
gitr/server9410/repos/demo/refs/heads/: master
gitr/server9410/repos/demo2/refs/heads/: branch
gitr/server9410/repos/demo3/pulls/: 0  1
gitr/src/: diff.rs  file_manager.rs  gitr_errors.rs  lib.rs  logger.rs  main.rs  main_server.rs
gitr/src/commands/: command_utils.rs  commands_fn.rs  handler.rs  mod.rs
gitr/src/git_transport/: deltas.rs  mod.rs  pack_file.rs  ref_discovery.rs
gitr/src/gui/: gui_from_glade.rs  gui_test.glade  gui_test.glade~  mod.rs
gitr/src/objects/: blob.rs  commit.rs  git_object.rs  mod.rs  pull_request.rs  tag.rs  tree.rs
gitr/src/server/: server_utils.rs
gitr/tests/: comands_tests.rs
