[package]
name = "gitr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]

chrono = "0.4.31"
flate2 = "1.0.27"
sha1 = "0.10.6"
serial_test = "*"
gtk = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]

name = "server"
path = "src/main_server.rs"

[[bin]]

name = "client"
path = "src/main.rs"
